@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-26T08:26:46Z",
-  "count_outdated" : 140,
-  "uniques_outdated" : 96,
+  "timestamp" : "2022-09-27T08:32:13Z",
+  "count_outdated" : 141,
+  "uniques_outdated" : 97,
   "count" : 148,
   "uniques" : 104,
   "clones" : [
-    {
-      "timestamp": "2022-09-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-14T00:00:00Z",
       "count": 1,
