@@ -1,3 +1,11 @@
+2022-09-27T08:32:13Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3134107099
+* notice: last 14d: unq all: 1 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 96 140 / 104 148
+* notice: next accum: outdated-unq outdated-all / unq all: 97 141 / 104 148
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-13] / []
+
 2022-09-26T08:26:46Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3126201349
 * notice: last 14d: unq all: 1 8
